# GO

./: .gitignore  CMakeLists.txt  GUI_main.cpp  LICENSE  README.md  install.sh  install_arch.sh  main.cpp  testing_main.cpp  training_main.cpp
GUI/: BoardGame.hpp  Client.hpp  GraphGUI.hpp
GUI/Include/: DisjointSets.hpp  MCTS.hpp
GUI/Include/Extra/: DisjointSets.hpp  Graph.hpp  Misc.hpp  NumberTheory.hpp  Utilities.hpp  hash_utilities.hpp  json_manage.hpp
GUI/Include/Search_Algorithms/: MCTS.hpp  MCTS_2.hpp  MCT_UCT_RAVE.hpp  MinMaxSearch.hpp
GUI/Include/Search_Algorithms/Archived/: mcts.hpp
GUI/Include/Search_Algorithms/C_49/: MCTS_Net_policy.hpp  Net_Class.hpp  loading_data.hpp
Graphs/: Complete5.json  Graph.json  Grid4.json  Test.json  grid5.json
Include/: BoardGame.hpp
Include/Extra/: DisjointSets.hpp  Graph.hpp  NaturalNumber.hpp  Utilities.hpp  hash_utilities.hpp  json_manage.hpp  printable.hpp
Include/Search_Algorithms/: MCTS.hpp  MCT_UCT_RAVE.hpp
Include/Search_Algorithms/C_49/: MCTS_Net_policy.hpp  loading_data.hpp
Search_Algorithms/: MCTS.hpp  MCT_UCT_RAVE.hpp
Search_Algorithms/Archived/: MCTS_2.hpp  mcts.hpp
Search_Algorithms/C_49/: Data_manage.hpp  Net_Class.hpp  Net_trainer.hpp  RAVE_Net.hpp  UCT_Net.hpp  encoders.hpp  game_structure.hpp  loading_data.hpp  torch_utils.hpp
Search_Algorithms/C_49/Encoders_classes/: encoders.hpp
Search_Algorithms/C_49/Grid/: Net_trainer.hpp  changelog.txt
Search_Algorithms/C_49/Grid/Data/: Data_grid5.json  GameDataTest.json
Search_Algorithms/C_49/Grid/Encoders_classes/: encoders.hpp
Search_Algorithms/C_49/Grid/Include/: Data_manage.hpp  game_structure.hpp
Search_Algorithms/C_49/Grid/NN_classes/: Net_Class.hpp
Search_Algorithms/C_49/Include/: Data_manage.hpp  game_structure.hpp  torch_utils.hpp
Search_Algorithms/C_49/Models/: Model_grid5.pt
Search_Algorithms/C_49/NN_classes/: Net_Class.hpp  Net_ClassGrid.hpp
Search_Algorithms/Standard_Engines/: MCT_UCT_RAVE.hpp  MinMaxSearch.hpp  random_agent.hpp
Search_Algorithms/testing/: Data_grid5.json  codigo_volando.txt  network_train.hpp  random_samples.hpp
Search_Algorithms/testing/python_scripts/: GraphNet.py  GridEncoder.py  GridNet.py  data_utils.py  encoders.py  training_main.py  utils.py
Thesis/: notas de redacción
src/: BoardGame.cpp  Graph.cpp
tests/: DisjointSets_test.cpp  Graph_test.cpp  basic_test.cpp  board_test.cpp  encoder_test.cpp  json_test.cpp  torch_test.cpp
